# CommonSourceCodeProject

./: .gitignore  .gitmodules  README.md  history.txt  readme.txt
.github/ISSUE_TEMPLATE/: 不具合報告.md  機能追加等の要望.md
android_unity/: settings.gradle
android_unity/app/: build.gradle
android_unity/app/src/main/cpp/: CMakeLists.txt  _FAMILYBASIC.txt  _FM7.txt  _FM77.txt  _FMR30_I186.txt  _FMR30_I286.txt  _FMR50_I486.txt  _FMR70.txt  _FMR80.txt  _FP1100.txt  _FP200.txt  _FSA1.txt  _GAMEGEAR.txt  _JR800.txt  _M23.txt  _M5.txt  _MAP1010.txt  _MSX2.txt  _MULTI8.txt  _MYCOMZ80A.txt  _MZ2800.txt  _MZ5500.txt  _MZ6500.txt  _MZ700.txt  _MZ800.txt  _MZ80A.txt  _PASOPIA7.txt  _PC100.txt  _PC2001.txt  _PC6001.txt  _PC6001MK2.txt  _PC6001MK2SR.txt  _PC8001.txt  _PC8001MK2.txt  _PC8801.txt  _PC8801MK2.txt  _PC9801RA.txt  _PC9801U.txt  _PC9801VM.txt  _PC98HA.txt  (+12 more)
android_unity/gradle/wrapper/: gradle-wrapper.properties
androidstudio/: build.gradle  gradle.properties  local.properties  settings.gradle
androidstudio/CSPConfig/: build.gradle
androidstudio/app/: build.gradle
androidstudio/app/src/main/cpp/: CMakeLists.txt  _BMJR.txt  _BUBCOM80.txt  _BX1.txt  _CEFUCOM21.txt  _COLECOVISION.txt  _FAMILYBASIC.txt  _FM16BETA_I186.txt  _FM16BETA_I286.txt  _FM7.txt  _FM77.txt  _FM77AV.txt  _FM77AV40.txt  _FM77AV40EX.txt  _FM77L2.txt  _FM77L4.txt  _FM8.txt  _FMR50_I286.txt  _FMR50_I386.txt  _FMR60.txt  _FX9000P.txt  _GAMEGEAR.txt  _HC20.txt  _HC40.txt  _HC80.txt  _HX20.txt  _J3100GT.txt  _J3100SL.txt  _JR100.txt  _JR800.txt  _JX.txt  _M23.txt  _M5.txt  _M68.txt  _MASTERSYSTEM.txt  _MSX.txt  _MSX1.txt  _MSX2.txt  _MSX2P.txt  _MULTI8.txt  (+58 more)
androidstudio/buildbatch/: allbuild.bat  alldbuild.bat  alldinstall.bat  allexecute.bat  allrbuild.bat  allrinstall.bat  alluninstall.bat  dbuild.bat  dbuildexec.bat  dinstall.bat  rbuild.bat  rbuildexec.bat  rinstall.bat
androidstudio/buildbatch/models/: check.csv  etc.csv  etc2.csv  etc3.csv  extendmenu.csv  gamemachine.csv  jr.csv  models.csv  msx.csv  mz.csv  pc60.csv  pc88.csv  pc98.csv  test.csv
androidstudio/buildbatch/subBatch/: dbuild.bat  dbuildexec.bat  dinstall.bat  (+4 more)
androidstudio/oboe/: include  src
src/: common.cpp  common.h  config.cpp  config.h  debugger.cpp  emu.cpp  emu.h  fifo.h  fileio.cpp  fileio.h
src/Android/: android_main.cpp  osd.cpp  osd.h  osd_console.cpp  osd_input.cpp  osd_midi.cpp  osd_screen.cpp  osd_socket.cpp  osd_sound.cpp  windows_define.h
src/UnityAndroid/: osd.cpp  osd.h  osd_console.cpp  osd_input.cpp  osd_screen.cpp  osd_socket.cpp  osd_sound.cpp  windows_define.h
src/res/: babbage2nd.rc  bubcom80.rc  cefucom21.rc  colecovision.rc  crc80.rc  ex80bs.rc  fp1100.rc  fsa1.rc  fx9000p.rc  gamegear.rc  hc40.rc  hc80.rc  hx20.rc  m23.rc  m5.rc  m68.rc  map1010.rc  mastersystem.rc  msx1.rc  msx2.rc  msx2p.rc  multi8.rc  mycomz80a.rc  mz1200.rc  mz1500.rc  mz2200.rc  mz2500.rc  mz3500.rc  mz700.rc  mz800.rc  mz80a.rc  mz80b.rc  mz80k.rc  pasopia.rc  pasopia7.rc  pasopia7lcd.rc  pc6001.rc  pc6001mk2.rc  pc6001mk2sr.rc  pc6601.rc  (+43 more)
src/vm/: 315-5124.cpp  315-5124.h  am9511.cpp  am9511.h  and.cpp  and.h  ay_3_891x.cpp  ay_3_891x.h  beep.cpp  beep.h  cmu800.cpp  cmu800.h  datarec.cpp  datarec.h  debugger.h  device.h  disk.cpp  disk.h  event.cpp  event.h  harddisk.cpp  harddisk.h  hd146818p.cpp  hd146818p.h  hd44102.cpp  hd44102.h  hd46505.cpp  hd46505.h  hd63484.cpp  hd63484.h  huc6280.cpp  huc6280.h  i286.cpp  i286.h  i286_np21.cpp  i286_np21.h  i386.cpp  i386.h  i386_np21.cpp  i386_np21.h  (+143 more)
src/win32/: osd.h  osd_sound.cpp  winmain.cpp
src/winplugin/: emuwrap.cpp  emuwrap.h  unitylog.cpp  unitylog.h
src/zlib-1.2.11/: .gitignore
tool/any2d88/: any2d88.vcxproj  any2d88.vcxproj.filters
tool/makeMipmap/: makeMipmap.py
tool/mz80k/: Form1.Designer.vb  Form1.vb  mz80k_kbd.vbproj
vc++2008/: bubcom80.vcproj  build9.bat  crc80.vcproj  ex80bs.vcproj  fmr30_i286.vcproj  fmr30_i86.vcproj  m23.vcproj  m68.vcproj  mycomz80a.vcproj  mz5500.vcproj  mz6500.vcproj  mz6550.vcproj  mz700.vcproj  mz700pal.vcproj  pc8801.vcproj  pc8801ma.vcproj  pc8801mk2.vcproj  pc9801.vcproj  pc9801e.vcproj  pc9801ra.vcproj  pc9801u.vcproj  pc9801vf.vcproj  pc9801vm.vcproj  pc9801vx.vcproj  pc98do.vcproj  pc98ha.vcproj  pc98lt.vcproj  pc98rl.vcproj  pc98xa.vcproj  pc98xl.vcproj  t250.vcproj  trnjr.vcproj  x1.vcproj  x1turbo.vcproj  x1turboz.vcproj  x1twin.vcproj  yis.vcproj
vc++2017/: babbage2nd.vcxproj.filters  bmjr.vcxproj.filters  bubcom80.vcxproj  bubcom80.vcxproj.filters  build15.bat  cefucom21.vcxproj.filters  colecovision.vcxproj.filters  crc80.vcxproj  crc80.vcxproj.filters  ex80bs.vcxproj  ex80bs.vcxproj.filters  familybasic.vcxproj.filters  fm16beta_i186.vcxproj.filters  fm16beta_i286.vcxproj.filters  fm7.vcxproj.filters  fm77av40.vcxproj.filters  fm77av40ex.vcxproj.filters  fm77l4.vcxproj.filters  fm8.vcxproj.filters  fmr30_i286.vcxproj  fmr30_i286.vcxproj.filters  fmr30_i86.vcxproj  fmr30_i86.vcxproj.filters  fmr50_i286.vcxproj.filters  fmr50_i486.vcxproj.filters  fmr60.vcxproj.filters  fmr70.vcxproj.filters  fmr80.vcxproj.filters  fp200.vcxproj.filters  fsa1.vcxproj.filters  gamegear.vcxproj.filters  hc80.vcxproj.filters  hx20.vcxproj.filters  j3100sl.vcxproj.filters  jr100.vcxproj.filters  jr800.vcxproj.filters  jx.vcxproj.filters  m23.vcxproj  m23.vcxproj.filters  m5.vcxproj.filters  (+112 more)
vc++2022/: babbage2nd.vcxproj  bmjr.vcxproj  bubcom80.vcxproj  bx1.vcxproj  bx1.vcxproj.filters  cefucom21.vcxproj  colecovision.vcxproj  crc80.vcxproj  ex80bs.vcxproj  familybasic.vcxproj  fm16beta_i186.vcxproj  fm16beta_i286.vcxproj  fm16pi.vcxproj  fm16pi.vcxproj.filters  fm7.vcxproj  fm77.vcxproj  fm77.vcxproj.filters  fm77av.vcxproj  fm77av.vcxproj.filters  fm77av40.vcxproj  fm77av40ex.vcxproj  fm77l4.vcxproj  fm8.vcxproj  fmr30_i286.vcxproj  fmr30_i286.vcxproj.filters  fmr30_i86.vcxproj  fmr30_i86.vcxproj.filters  fmr50_i286.vcxproj  fmr50_i386.vcxproj  fmr50_i386.vcxproj.filters  fmr50_i486.vcxproj  fmr60.vcxproj  fmr70.vcxproj  fmr80.vcxproj  fp1100.vcxproj  fp1100.vcxproj.filters  fp200.vcxproj  fsa1.vcxproj  fx9000p.vcxproj  fx9000p.vcxproj.filters  (+123 more)
(+858 files in other folders)
